--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ jsonwebtoken = "9.3.1"
 serde = "1.0.218"
 serde_json = "1.0.140"
 rsa = "0.9.7"
-postgres = "0.19.10"
 dotenvy = "0.15.7"
 bcrypt = "0.17.0"
 chrono = "0.4.40"
 thiserror = "2.0.12"
 anyhow = { version = "1.0", default-features = false }
+tokio = { version = "1", features = ["full"] }
+once_cell = "1.20.3"
+sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"] }
