--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,8 @@ thiserror = "2.0.12"
 anyhow = { version = "1.0", default-features = false }
 tokio = { version = "1", features = ["full"] }
 once_cell = "1.20.3"
-sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"] }
+sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "any"] }
+
+[dev-dependencies]
+sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls", "macros", "any"] }
+
