--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ anyhow = { version = "1.0", default-features = false }
 tokio = { version = "1", features = ["full"] }
 once_cell = "1.20.3"
 sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "any"] }
+regex = "1.11.1"
 
 [dev-dependencies]
 sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls", "macros", "any"] }
 rand = "0.8.5"
-
