--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ regex = "1.11.1"
 [dev-dependencies]
 sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls", "macros", "any"] }
 rand = "0.8.5"
+tokio-test = "0.4.4"
